# ai-interviewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md
backend/: pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/agent/: client.py  extraction.py  gap.py  interviewer.py  report.py
backend/app/mocks/: extraction_jd.json  extraction_resume.json  gap_analysis.json  interview_turn_0.json  interview_turn_1.json  interview_turn_2.json  interview_turn_3.json  interview_turn_4.json  interview_turn_5.json  report.json  transcription_resume.json
backend/app/routes/: job_descriptions.py  resumes.py  sessions.py
backend/scripts/: live_test.py  make_sample_pdf.py  smoke_test_agent.py  smoke_test_db.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/interview/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: GapBoard.tsx  InterviewClient.tsx  ReportClient.tsx  ResponseTrail.tsx  SiteHeader.tsx  Skeletons.tsx
frontend/lib/: api.ts  format.ts  gaps.ts
