[project]
name = "ai-interviewer-backend"
version = "0.1.0"
description = "FastAPI backend for the AI interview coach (Sigma technical assessment)"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "anthropic",
    "pypdf",
    "python-dotenv",
    "python-multipart>=0.0.32",
]
